--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -28,7 +28,7 @@
                     <td>
                         <a class="a-inside edit" href="../customers/edit/<%=data[i].id%>">Edit</a>
                        
-                        <a class="a-inside delete" href="../customers/delete/<%=data[i].id%>">Delete</a>
+                        <a class="a-inside delete" onclick="return confirm('Are you sure you want to delete this item?');" href="../customers/delete/<%=data[i].id%>">Delete</a>
                        
                     </td>
                 </tr>
