--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -4,6 +4,10 @@
         <title>Contoh CRUD Node.js-MySQL</title>
         <link href="/../css/style.css" rel="stylesheet">
         <script type="text/javascript" src="/../js/all.js"></script>
+         <script type="text/javascript" src="/../js/jquery.min.js"></script>
+         <script type="text/javascript" src="/../js/common.js"></script>
+
+        
     </head>
     <body>
         <div id="wrapper">
