--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,13 @@ input[type="text"]{
     height:26px;
     width:300px;
 }
+
+input[type="password"]{
+    
+    border:1px solid #ddd;
+    height:26px;
+    width:300px;
+}
 .cancel{
     background-color:#D23641;color:#fff;
     border:1px solid #d32132;color:#fff;
